@@ -219,12 +219,10 @@ def kernel(casscf, mo_coeff, tol=1e-7, conv_tol_grad=None,
 
     mo = mo_coeff
     nmo = mo[0].shape[1]
-    ncore = casscf.ncore
-    ncas = casscf.ncas
     #TODO: lazy evaluate eris, to leave enough memory for FCI solver
     eris = casscf.ao2mo(mo)
     e_tot, e_ci, fcivec = casscf.casci(mo, ci0, eris, log, locals())
-    if ncas == nmo:
+    if casscf.ncas == nmo:
         return True, e_tot, e_ci, fcivec, mo
 
     if conv_tol_grad is None:
@@ -238,7 +236,7 @@ def kernel(casscf, mo_coeff, tol=1e-7, conv_tol_grad=None,
     r0 = None
 
     t1m = log.timer('Initializing 1-step CASSCF', *cput0)
-    casdm1, casdm2 = casscf.fcisolver.make_rdm12s(fcivec, ncas, casscf.nelecas)
+    casdm1, casdm2 = casscf.fcisolver.make_rdm12s(fcivec, casscf.ncas, casscf.nelecas)
     norm_ddm = 1e2
     casdm1_last = casdm1
     t3m = t2m = log.timer('CAS DM', *t1m)
@@ -288,14 +286,14 @@ def kernel(casscf, mo_coeff, tol=1e-7, conv_tol_grad=None,
         totinner += njk
 
         mo = casscf.rotate_mo(mo, u, log)
-        r0 = casscf.pack_uniq_var(u)
-
-        u = g_orb = eris = None
+        u = u.copy()
+        g_orb = g_orb.copy()
+        eris = None
         eris = casscf.ao2mo(mo)
         t2m = log.timer('update eri', *t3m)
 
         e_tot, e_ci, fcivec = casscf.casci(mo, fcivec, eris, log, locals())
-        casdm1, casdm2 = casscf.fcisolver.make_rdm12s(fcivec, ncas, casscf.nelecas)
+        casdm1, casdm2 = casscf.fcisolver.make_rdm12s(fcivec, casscf.ncas, casscf.nelecas)
         norm_ddm =(numpy.linalg.norm(casdm1[0] - casdm1_last[0])
                  + numpy.linalg.norm(casdm1[1] - casdm1_last[1]))
         casdm1_last = casdm1
@@ -312,6 +310,8 @@ def kernel(casscf, mo_coeff, tol=1e-7, conv_tol_grad=None,
 
         if callable(callback):
             callback(locals())
+
+        r0 = casscf.pack_uniq_var(u)
 
     if conv:
         log.info('1-step CASSCF converged in %d macro (%d JK %d micro) steps',
